# rust-orma

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
orma/: Cargo.toml  README.md  TESTING.md
orma-derive/: Cargo.toml  README.md
orma-derive/src/: dbdata.rs  lib.rs  test_impl.rs
orma-derive/tests/: test.rs
orma-mobc/: Cargo.toml  README.md
orma-mobc/src/: lib.rs
orma/docker/: Dockerfile.postgres  docker-compose.yml
orma/docker/files/: sql_setup.sh
orma/docker/orma/: docker-compose.yml
orma/src/: dbentity.rs  dbjoin.rs  lib.rs
orma/src/db_anti_corruption/: connection.rs  db_error.rs  mod.rs  row.rs  statement.rs  tls.rs
orma/tests/: db_setup.sql  test.rs
orma/tests/group/: mod.rs
orma/tests/user/: mod.rs
