[package]
name = "orma-mobc"
version = "0.1.3"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.22" }
mobc = { version = "0.5.3" }
orma = { version = "=0.1.3", path = "../orma" }

[dev-dependencies]
futures = "0.3.1"
tokio = { version = "0.2.10", features = [ "full" ] }
