[package]
name = "orma-mobc"
version = "0.1.4"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
edition = "2018"
license = "MIT"
description = "Connection pool for Orma, based on mobc"
repository = "https://github.com/RedSoftwareSystems/rust-orma"
readme = "../README.md"
keywords = ["postgres", "postgresql", "pool", "orma", "mobc"]
categories = ["database"]

[dependencies]
async-trait = { version = "0.1.22" }
mobc = { version = "0.5.3" }
orma = { version = "=0.1.4", path = "../orma" }

[dev-dependencies]
futures = "0.3.1"
tokio = { version = "0.2.11", features = [ "full" ] }
