[package]
name = "orma"
version = "0.3.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
edition = "2018"
license = "MIT"
description = "A PostgreSQL ORM written in Rust language"
repository = "https://github.com/RedSoftwareSystems/rust-orma"
readme = "../README.md"
keywords = ["postgres", "postgresql", "orm", "sql", "json"]
categories = ["database"]

[dependencies]
tokio-postgres = {version = "0.5.3", features = ["with-uuid-0_8", "with-serde_json-1", "runtime"]}
serde = {version = "1.0.106", features = [ "derive" ]}
serde_json = "1.0.50"
serde_derive = "1.0.106"
futures = "0.3.4"
tokio = { version = "0.2.16", features = [ "full" ] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
orma-derive = { version = "=0.3.0", optional = true, path = "../orma-derive" }


[dev-dependencies]
orma-derive = { path = "../orma-derive" }

### FEATURES #################################################################

[features]
# Provide derive(Serialize, Deserialize) macros.
derive = ["orma-derive"]